--- a/templates/base.Jinja2
+++ b/templates/base.Jinja2
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
     <head>
     <title>Blog > {% block subtitle %}Index{% endblock %}</title>
     </head>
     <body>
+    <header><h1><a href="/blog">Blog assignment</a></h1></header>
+
+
     <section>
         {% block content %}
         {% endblock %}
     </section>
+
+    <footer><p><a href="/blog/newpost">New post</a></p></footer>
     </body>
 </html>
 
