--- a/templates/submit_form.Jinja2
+++ b/templates/submit_form.Jinja2
@@ -12,7 +12,7 @@
         </form>
 
         {% if error %}
-            <p>Error : {{ error }}</p>
+            <p>{{ error }}</p>
         {% endif %}
 
 {% endblock %}
