--- a/templates/home.Jinja2
+++ b/templates/home.Jinja2
@@ -10,4 +10,17 @@
         <p>{{ post.content }}</p>
     {% endfor %}
 
+
+    <h1>Signup</h1>
+<form method="post" action="/blog/login">
+    <dl>
+	<dt>Username</dt>
+	    <dd><input type="text" name="username" value="" /> </dd>
+	<dt>Password</dt>
+	    <dd><input type="password" name="password" /> </dd>
+    </dl>
+
+    <input type="submit" />
+</form>
+
 {% endblock %}
